updated namespace for shiny

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,10 @@ export(plotDoseResponse)
 export(plotExprAUC)
 export(plotGeneBoxplot)
 export(runDiffExpr)
+export(runPharmacoExploreR)
 export(volcanoAUC)
 import(ggplot2)
+import(shiny)
 importFrom(PharmacoGx,availablePSets)
 importFrom(PharmacoGx,downloadPSet)
 importFrom(PharmacoGx,summarizeMolecularProfiles)
